--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost/projectrestapibank
 spring.datasource.username=postgres
-spring.datasource.password=psql
+#spring.datasource.password=psql
+spring.datasource.password=1234
 
 #Conexion BD MONGODB
 spring.data.mongodb.host=localhost
